--- a/CodingAssignment01/CodingAssignment1.Rmd
+++ b/CodingAssignment01/CodingAssignment1.Rmd
@@ -48,6 +48,8 @@ Answer the following questions using complete sentences and attach all output, p
 
 Perform univariate analyses on the quantitative variables (center, shape, spread). Include descriptive statistics, and histograms. Be sure to use terms discussed in class such as bimodal, skewed left, etc.
 
+`Included categorical in summary (-1)`
+
 ```{r q1}
 
 ```
@@ -59,6 +61,8 @@ Perform bivariate analyses on the quantitative variables (direction, strength an
 ```{r q2}
 
 ```
+
+`Skipped relationship between independent variables (-6)`
 
 # Question 3
 
